--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,29 @@ body {
   font-family: "Merriweather", serif;
 }
 
+#shape {
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 90%);
+
+  background: #4776E6;  
+  background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);  
+  background: linear-gradient(to right, #8E54E9, #4776E6);
+
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
 main {
+  background-color: white;
+  padding: 28px;
+  border-radius: 7px;
   max-width: 768px;
   margin: auto;
+  margin-top: 56px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 6px 0px;
 }
 
 table {
@@ -20,6 +40,11 @@ table > tbody > tr:nth-child(odd) {
 	background-color: #f4f4f4;
 }
 
-table > tbody > tr > td {
+table > tbody > tr > td,
+table > thead > tr > th {
 	padding: 14px;
+}
+
+.hardware-specs table {
+  margin-bottom: 56px;
 }
