--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,11 @@ body {
   padding-bottom: 53px;
   font-family: "Merriweather", serif;
 }
-
 #shape {
   clip-path: polygon(0 0, 100% 0, 100% 75%, 0 90%);
-
   background: #4776E6;  
   background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);  
   background: linear-gradient(to right, #8E54E9, #4776E6);
-
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -17,7 +14,6 @@ body {
   left: 0;
   z-index: -1;
 }
-
 main {
   background-color: white;
   padding: 28px;
@@ -27,24 +23,31 @@ main {
   margin-top: 56px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 6px 0px;
 }
-
 table {
 	width: 100%;
 }
-
 section {
 	margin-top: 56px;
 }
-
 table > tbody > tr:nth-child(odd) {
 	background-color: #f4f4f4;
 }
-
+table > tbody > tr > td:first-child {
+  width: 174px;
+}
 table > tbody > tr > td,
 table > thead > tr > th {
 	padding: 14px;
 }
-
 .hardware-specs table {
   margin-bottom: 56px;
+}
+.pill {
+  background: #4776E6;  
+  background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);  
+  background: linear-gradient(to right, #8E54E9, #4776E6);
+  color: white;
+  display: inline-block;
+  padding: 14px;
+  border-radius: 7px;
 }
