--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,6 @@ table > thead > tr > th {
   background: linear-gradient(to right, #8E54E9, #4776E6);
   color: white;
   display: inline-block;
-  padding: 14px;
+  padding: 7px 14px;
   border-radius: 7px;
 }
