--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,11 @@ table > tbody > tr > td:first-child {
 }
 table > tbody > tr > td,
 table > thead > tr > th {
-	padding: 14px;
+  padding: 14px;
+  word-wrap: break-word;
+}
+td.poolid {
+  word-wrap: anywhere;
 }
 .hardware-specs table {
   margin-bottom: 56px;
@@ -50,4 +54,9 @@ table > thead > tr > th {
   display: inline-block;
   padding: 7px 14px;
   border-radius: 7px;
+}
+@media only screen and (max-width: 600px) {
+  table > tbody > tr > td:first-child {
+    width: initial;
+  }
 }
