--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 body {
   padding-bottom: 53px;
-  font-family: "Merriweather", serif;
+  font-family: "Roboto", sans-serif;
 }
 #shape {
   clip-path: polygon(0 0, 100% 0, 100% 75%, 0 90%);
